--- a/06-apply.qmd
+++ b/06-apply.qmd
@@ -4,6 +4,8 @@ editor: visual
 ---
 ![](images/Strategy_Centered_blue_grey.png){fig-align="center" width="65%"}
 
+[Apply Here](https://marriott.byu.edu/apply/dashboard/). Applications due: Last work day of June before 4:30 p.m
+
 ## Application Tips {.unnumbered}
 
 ### Case preparation {.unnumbered}
