--- a/01-courses.qmd
+++ b/01-courses.qmd
@@ -3,7 +3,7 @@ title: "Courses"
 editor: visual
 ---
 
-![](images/Strategy_Centered_blue_grey.png){fig-align="center" width="65%"}s
+![](images/Strategy_Centered_blue_grey.png){fig-align="center" width="65%"}
 
 ## Major Pre-reqs {.unnumbered}
 
@@ -35,11 +35,11 @@ All newly admitted students enroll in the following courses their Junior year:
 ### Fall Semester {.unnumbered}
 
 -   STRAT 326: Career Development (1.0 credit)
--   STRAT 401: Strategy 1 (3.0 credits)
--   STRAT 402: Strategy Analytics (3.0 credits)
--   STRAT 431: Strategic Thinking (1.5 credits)
+-   STRAT 401: Intro to Strategic Management (3.0 credits)
+-   STRAT 402: Economics of Strategy (3.0 credits)
+-   STRAT 431: Strategic Thinking I (1.5 credits)
 
-Students who have not yet completed ECON 110 or STATS 
+Students who have not completed ECON 110 or STATS 121 should enroll in these during their first Fall semester in the program.
 
 **Students interested in applying for one of the three [Product Management capstone experiences](02-capstone.qmd#product-management-experiences) should also enroll in one of:**
 
@@ -60,21 +60,31 @@ Each student completes a single capstone experience by the time they graduate.
 
 ### Winter Semester {.unnumbered}
 
--   STRAT 411: Strategy II (3.0 credits)
--   STRAT 412: Strategy Analytics II (3.0 credits)
+-   STRAT 411: Competitive Strategy (3.0 credits)
+-   STRAT 412: Data Analytics for Strategists (3.0 credits)
 -   STRAT 432: Strategic Thinking II (1.5 credits)
 
-Fall or Winter Semester Year 2 - STRAT 421: Strategy Implementation (3.0 credits) - STRAT 433: Strategic Thinking III (1.0 credits)
-
-Additional Elective Requirements Students also complete three electives to allow them to customize their path in addition to the core business requirements.
-
 Students interested in doing the [Sandbox capstone experience](02-capstone.qmd#sandbox) will apply during Winter semester of their Junior year.
+
+Students admitted to the [Associate Product Manager (APM) Internship](02-capstone.qmd#associate-product-manager-apm-internship) will also enroll in:
+
+- STRAT 477: APM Lab (3.0 credits)
+- STRAT 490R: APM Capstone (1.0 credits)
+
+## Senior Year for Majors {.unnumbered}
+
+### Fall Sememster {.unnumbered}
+
+- STRAT 421: Strategy Implementation (3.0 credits)
+
+Students admitted to the [Associate Product Manager (APM) Internship](02-capstone.qmd#associate-product-manager-apm-internship) will also enroll in:
+
+- ENT 401: Creativity and Innovation (3.0 credits)
 
 ## Course List {.unnumbered}
 
 A list of courses and key questions addressed in each is shown in the table below:
 
-```{=html}
 <style>
   table.custom-table {
     border-collapse: collapse;
@@ -105,166 +115,82 @@ A list of courses and key questions addressed in each is shown in the table belo
     vertical-align: middle;
   }
 </style>
-```
 
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Course Number | Title                                                     | Key Question Addressed by the Class                                                                                                                                            |
-+===============+===========================================================+================================================================================================================================================================================+
-| STRAT 401     | Intro to Strategic Management                             | How do firms sustain competitive advantage and capture value? (case discussions)                                                                                               |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 402     | Economics of Strategy                                     | What are the economic foundations that drive the success and failure of companies (e.g. competition, pricing, supply, demand, production, cost)?                               |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 411     | Competitive Strategy                                      | You play the role of consultant and answer for executives: What should the company do to improve performance in a competitive and always changing market? (case presentations) |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 412     | Data Analytics for Strategists                            | What is the data telling me? (gather, analyze, and communicate insights)                                                                                                       |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 431/432 | Strategic Thinking                                        | How can I apply rigorous thinking to broader, societal questions?                                                                                                              |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ENT 401       | Creativity and Innovation                                 | How do companies innovate and create more value for customers?                                                                                                                 |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 325     | Intro to Management Consulting                            | How can I best prepare to land the interview, nail it, and then excel in a Management Consulting job?                                                                          |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 490R    | Creating Digital Products with AI: Strategy & Prototyping | How can I leverage new AI tools to rapidly test and iterate on new digital product ideas? (build with AI-assisted coding)                                                      |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 490R    | Understanding AI: From Foundations to Strategy            | How does AI work under the hood and what can I expect and not expect from it? (explores the math and code)                                                                     |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 490R    | Enterprise Technology Strategy in the Age of AI           | How can leaders leverage AI to lead responsible digital transformation within their company?                                                                                   |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| STRAT 490R    | Advanced Strategy Analytics                               | How can I apply advanced analytics to real business questions? (python, statistical methods)                                                                                   |
-+---------------+-----------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+<table class="custom-table">
+  <thead>
+    <tr>
+      <th>Course Number</th>
+      <th>Title</th>
+      <th>Key Question Addressed by the Class</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="highlight">
+      <td>STRAT 401</td>
+      <td>Intro to Strategic Management</td>
+      <td>How do firms sustain competitive advantage and capture value? (case discussions)</td>
+    </tr>
+    <tr class="highlight">
+      <td>STRAT 402</td>
+      <td>Economics of Strategy</td>
+      <td>What are the economic foundations that drive the success and failure of companies (e.g. competition, pricing, supply, demand, production, cost)?</td>
+    </tr>
+    <tr class="highlight">
+      <td>STRAT 411</td>
+      <td>Competitive Strategy</td>
+      <td>You play the role of consultant and answer for executives: What should the company do to improve performance in a competitive and always changing market? (case presentations)</td>
+    </tr>
+    <tr class="highlight">
+      <td>STRAT 412</td>
+      <td>Data Analytics for Strategists</td>
+      <td>What is the data telling me? (gather, analyze, and communicate insights)</td>
+    </tr>
+    <tr class="highlight">
+      <td>STRAT 431/432</td>
+      <td>Strategic Thinking</td>
+      <td>How can I apply rigorous thinking to broader, societal questions?</td>
+    </tr>
+    <tr>
+      <td>ENT 401</td>
+      <td>Creativity and Innovation</td>
+      <td>How do companies innovate and create more value for customers?</td>
+    </tr>
+    <tr>
+      <td>STRAT 325</td>
+      <td>Intro to Management Consulting</td>
+      <td>How can I best prepare to land the interview, nail it, and then excel in a Management Consulting job?</td>
+    </tr>
+    <tr>
+      <td>STRAT 490R</td>
+      <td>Creating Digital Products with AI: Strategy & Prototyping</td>
+      <td>How can I leverage new AI tools to rapidly test and iterate on new digital product ideas? (build with AI-assisted coding)</td>
+    </tr>
+    <tr>
+      <td>STRAT 490R</td>
+      <td>Understanding AI: From Foundations to Strategy</td>
+      <td>How does AI work under the hood and what can I expect and not expect from it? (explores the math and code)</td>
+    </tr>
+    <tr>
+      <td>STRAT 490R</td>
+      <td>Enterprise Technology Strategy in the Age of AI</td>
+      <td>How can leaders leverage AI to lead responsible digital transformation within their company?</td>
+    </tr>
+    <tr>
+      <td>STRAT 490R</td>
+      <td>Advanced Strategy Analytics</td>
+      <td>How can I apply advanced analytics to real business questions? (python, statistical methods)</td>
+    </tr>
+  </tbody>
+</table>
 
-------------------------------------------------------------------------
+---
 
-Junior Core Electives
+<span class="legend-box" style="background-color: #f0f8ff;"></span> Junior Core
+<span class="legend-box" style="background-color: #ffffff; border: 1px solid #ccc;"></span> Electives
 
-```{=html}
-<h2>📘 Strategy Major Course Planner</h2>
 
-<div style="display: flex; flex-direction: column; gap: 2rem;">
 
-  <!-- Junior Year -->
-  <div>
-    <h3>Junior Year</h3>
-    <div style="display: flex; gap: 2rem; flex-wrap: wrap;">
-      <!-- Fall -->
-      <div style="flex: 1; min-width: 300px;">
-        <h4>Fall Semester</h4>
-        <ul id="junior-fall" style="list-style-type: none; padding-left: 0;">
-          <li data-credits="1.0">✅ STRAT 326: Career Development (1.0)</li>
-          <li data-credits="3.0">✅ STRAT 401: Strategy I (3.0)</li>
-          <li data-credits="3.0">✅ STRAT 402: Strategy Analytics (3.0)</li>
-          <li data-credits="1.5">✅ STRAT 431: Strategic Thinking I (1.5)</li>
-        </ul>
-        <label>Elective: 
-          <select class="elective" data-target="junior-fall" data-credits="3.0">
-            <option value="">-- Select an elective --</option>
-            <option value="ENT 401">ENT 401: Creativity & Innovation</option>
-            <option value="MKTG 430">MKTG 430: Customer Analytics</option>
-          </select>
-        </label>
-        <p><strong>Fall Credits:</strong> <span id="junior-fall-total">0</span></p>
-      </div>
 
-      <!-- Winter -->
-      <div style="flex: 1; min-width: 300px;">
-        <h4>Winter Semester</h4>
-        <ul id="junior-winter" style="list-style-type: none; padding-left: 0;">
-          <li data-credits="3.0">✅ STRAT 411: Strategy II (3.0)</li>
-          <li data-credits="3.0">✅ STRAT 412: Strategy Analytics II (3.0)</li>
-          <li data-credits="1.5">✅ STRAT 432: Strategic Thinking II (1.5)</li>
-        </ul>
-        <label>Elective: 
-          <select class="elective" data-target="junior-winter" data-credits="3.0">
-            <option value="">-- Select an elective --</option>
-            <option value="MSB 472">MSB 472: Social Innovation</option>
-            <option value="IS 520">IS 520: Business Programming</option>
-          </select>
-        </label>
-        <p><strong>Winter Credits:</strong> <span id="junior-winter-total">0</span></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Senior Year -->
-  <div>
-    <h3>Senior Year</h3>
-    <div style="display: flex; gap: 2rem; flex-wrap: wrap;">
-      <!-- Fall -->
-      <div style="flex: 1; min-width: 300px;">
-        <h4>Fall Semester</h4>
-        <ul id="senior-fall" style="list-style-type: none; padding-left: 0;">
-          <li data-credits="3.0">✅ STRAT 490R: Digital Products with AI (3.0)</li>
-        </ul>
-        <label>Elective: 
-          <select class="elective" data-target="senior-fall" data-credits="3.0">
-            <option value="">-- Select an elective --</option>
-            <option value="STRAT 490R: Enterprise AI Strategy">STRAT 490R: Enterprise AI Strategy</option>
-            <option value="ENT 491">ENT 491: Entrepreneurship Lab</option>
-          </select>
-        </label>
-        <p><strong>Fall Credits:</strong> <span id="senior-fall-total">0</span></p>
-      </div>
-
-      <!-- Winter -->
-      <div style="flex: 1; min-width: 300px;">
-        <h4>Winter Semester</h4>
-        <ul id="senior-winter" style="list-style-type: none; padding-left: 0;">
-          <li data-credits="3.0">✅ STRAT 490R: Understanding AI (3.0)</li>
-        </ul>
-        <label>Elective: 
-          <select class="elective" data-target="senior-winter" data-credits="3.0">
-            <option value="">-- Select an elective --</option>
-            <option value="STRAT 490R: Advanced Analytics">STRAT 490R: Advanced Analytics</option>
-            <option value="MSB 475">MSB 475: Global Business</option>
-          </select>
-        </label>
-        <p><strong>Winter Credits:</strong> <span id="senior-winter-total">0</span></p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Total -->
-  <div>
-    <h3>Total Program Credits: <span id="total-program-credits">0</span></h3>
-  </div>
-
-</div>
-
-<script>
-  function computeCredits(containerId) {
-    const staticCourses = document.querySelectorAll(`#${containerId} li`);
-    const elective = document.querySelector(`select.elective[data-target="${containerId}"]`);
-    const electiveCredits = elective && elective.value ? parseFloat(elective.dataset.credits || 0) : 0;
-    const staticTotal = Array.from(staticCourses).reduce((sum, li) => sum + parseFloat(li.dataset.credits || 0), 0);
-    return staticTotal + electiveCredits;
-  }
-
-  function updateAllCredits() {
-    const ids = ["junior-fall", "junior-winter", "senior-fall", "senior-winter"];
-    let total = 0;
-    ids.forEach(id => {
-      const credits = computeCredits(id);
-      document.getElementById(`${id}-total`).textContent = credits.toFixed(1);
-      total += credits;
-    });
-    document.getElementById("total-program-credits").textContent = total.toFixed(1);
-  }
-
-  // Initial load
-  updateAllCredits();
-
-  // Recalculate when electives change
-  document.querySelectorAll("select.elective").forEach(select => {
-    select.addEventListener("change", updateAllCredits);
-  });
-</script>
-```
-
-## Course Planner  {.unnumbered}
-
-Use the tool below to plan your path through the Strategic Management major. Drag courses into the semester boxes and ensure a balanced credit load (recommended 12–18 credits per semester).
-
-<iframe src="course-planner.html" width="100%" height="900px" style="border:none;"></iframe>
 
 
 
