--- a/04-clubs.qmd
+++ b/04-clubs.qmd
@@ -16,7 +16,13 @@ The Strategic Management program sponsors four [clubs](https://clubs.byu.edu/) t
 
 It's not expected that a student would attend all of these clubs, but students interested in admission should plan to explore the clubs and see if there's one that they have particular interest in. 
 
-In addition to these four clubs all admitted students become part of the Strategy Society. The Strategy Society is led by a student leadership team who leads program wide events and initiatives. The strategy society presidency is also your first point of contact if you have questions about the program and whether it would be a good fit.
+Specific questions about course offerings can be directed to [Lisa Giguere](mailto:lisa_giguere@byu.edu) from the [advisement office](https://marriott.byu.edu/advisement/center/contact/).
+
+Specific questions about career pathways can be directed to [Bill Keenan](mailto:bill_keenan@byu.edu) from the [Marriott Business Career Center](https://careerlaunch.byu.edu/meet-the-team).
+
+### Strategy Society {.unnumbered}
+
+The Strategy Society is led by a student leadership team who leads program wide events and initiatives. The strategy society presidency is also your first point of contact if you have questions about the program and whether it would be a good fit.
 
 - [President - Carter Boswell](mailto:cjboz@student.byu.edu)  
 - [VP of Student Development - Alex Napierski](mailto:ajnap3@student.byu.edu)  
@@ -24,16 +30,18 @@ In addition to these four clubs all admitted students become part of the Strateg
 - [VP of Alumni - Dustin Hubnik](mailto:dhubnik@student.byu.edu)  
 - [VP of Events - Kolton Dahl](mailto:kdahl007@student.byu.edu)
 
-Specific questions about course offerings can be directed to [Lisa Giguere](mailto:lisa_giguere@byu.edu) from the [advisement office](https://marriott.byu.edu/advisement/center/contact/).
+### Management Consulting Association (MCA) {.unnumbered}
 
-Specific questions about career pathways can be directed to [Bill Keenan](mailto:bill_keenan@byu.edu) from the [Marriott Business Career Center](https://careerlaunch.byu.edu/meet-the-team).
-
-## Strategy Society {.unnumbered}
-
-## Management Consulting Association (MCA) {.unnumbered}
+Details coming soon.
 
 ## Product Management Association (PMA) {.unnumbered}
 
-## Corporate Strategy Association (CSA) {.unnumbered}
+Details coming soon.
 
-## Women in Strategy Association (WSA) {.unnumbered}
+### Corporate Strategy Association (CSA) {.unnumbered}
+
+Details coming soon.
+
+### Women in Strategy Association (WSA) {.unnumbered}
+
+Details coming soon.
