--- a/04-clubs.qmd
+++ b/04-clubs.qmd
@@ -15,48 +15,50 @@ It's not expected that a student would attend all of these clubs, but students i
 
 The Strategy Society is led by a student leadership team who leads program wide events and initiatives. The strategy society presidency is also your first point of contact if you have questions about the program and whether it would be a good fit.
 
-<table style="width:100%; text-align: center;">
-  <tr>
-    <td>
-      <img src="images/carter.jpeg" alt="Carter Boswell" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Carter Boswell</strong><br>
-      President<br>
-      <a href="mailto:cjboz@student.byu.edu">Contact</a>
-    </td>
-    <td>
-      <img src="images/alex.jpeg" alt="Alex Napierski" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Alex Napierski</strong><br>
-      VP of Student Development<br>
-      <a href="mailto:ajnap3@student.byu.edu">Contact</a>
-    </td>
-    <td>
-      <img src="images/cora.jpeg" alt="Cora Montgomery" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Cora Montgomery</strong><br>
-      VP of Marketing<br>
-      <a href="mailto:coramo@student.byu.edu">Contact</a>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="3" style="text-align: center;">
-      <table style="margin: 0 auto; text-align: center;">
-        <tr>
-          <td style="padding: 0 2rem;">
-            <img src="images/dustin.jpeg" alt="Dustin Hubnik" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-            <strong>Dustin Hubnik</strong><br>
-            VP of Alumni<br>
-            <a href="mailto:dhubnik@student.byu.edu">Contact</a>
-          </td>
-          <td style="padding: 0 2rem;">
-            <img src="images/kolton.jpeg" alt="Kolton Dahl" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-            <strong>Kolton Dahl</strong><br>
-            VP of Events<br>
-            <a href="mailto:kdahl007@student.byu.edu">Contact</a>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+## Student Leadership
+
+:::: {.presidency-grid}
+
+::: {.profile-card}
+<img src="images/carter.jpeg" alt="Carter Boswell" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Carter Boswell**  
+President  
+[Contact](mailto:cjboz@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/alex.jpeg" alt="Alex Napierski" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Alex Napierski**  
+VP of Student Development  
+[Contact](mailto:ajnap3@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/cora.jpeg" alt="Cora Montgomery" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Cora Montgomery**  
+VP of Marketing  
+[Contact](mailto:coramo@student.byu.edu)
+:::
+
+::::
+
+:::: {.presidency-grid}
+
+::: {.profile-card}
+<img src="images/dustin.jpeg" alt="Dustin Hubnik" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Dustin Hubnik**  
+VP of Alumni  
+[Contact](mailto:dhubnik@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/kolton.jpeg" alt="Kolton Dahl" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Kolton Dahl**  
+VP of Events  
+[Contact](mailto:kdahl007@student.byu.edu)
+:::
+
+::::
 
 ### [Management Consulting Association (MCA)](https://www.byumca.com/) {.unnumbered}
 
@@ -89,48 +91,56 @@ To achieve our mission, Association activities will provide:
 - Career placement support via resume coaching, interview prep, and job/intern referrals
 - A thriving community where students can explore, grow, and launch successful careers in product management. 
 
-<table style="width:100%; text-align: center;">
-  <tr>
-    <td>
-      <img src="images/spencer.jpeg" alt="Spencer Hintze" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Spencer Hintze</strong><br>
-      Co-president<br>
-      <a href="mailto:shintze1@student.byu.edu">Contact</a>
-    </td>
-    <td>
-      <img src="images/ella.jpeg" alt="Ella Moore" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Ella Moore</strong><br>
-      Co-president<br>
-      <a href="mailto:id214870@student.byu.edu">Contact</a>
-    </td>
-    <td>
-      <img src="images/carter-f.jpeg" alt="Carter Field" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Carter Field</strong><br>
-      VP – Marketing<br>
-      <a href="mailto:fieldcc@student.byu.edu">Contact</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <img src="images/dylan.jpeg" alt="Dylan Mattern" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Dylan Mattern</strong><br>
-      VP – Data and Technology<br>
-      <a href="mailto:dmattern@student.byu.edu">Contact</a>
-    </td>
-    <td>
-      <img src="images/nate.jpeg" alt="Nathan McCauley" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Nathan McCauley</strong><br>
-      VP – Placement<br>
-      <a href="mailto:nmccaul@student.byu.edu">Contact</a>
-    </td>
-    <td>
-      <img src="images/philip.jpeg" alt="Philip Sun" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
-      <strong>Philip Sun</strong><br>
-      VP – Events<br>
-      <a href="mailto:ps324@student.byu.edu">Contact</a>
-    </td>
-  </tr>
-</table>
+:::: {.presidency-grid}
+
+::: {.profile-card}
+<img src="images/spencer.jpeg" alt="Spencer Hintze" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Spencer Hintze**  
+Co-president  
+[Contact](mailto:shintze1@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/ella.jpeg" alt="Ella Moore" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Ella Moore**  
+Co-president  
+[Contact](mailto:id214870@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/carter-f.jpeg" alt="Carter Field" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Carter Field**  
+VP – Marketing  
+[Contact](mailto:fieldcc@student.byu.edu)
+:::
+
+::::
+
+:::: {.presidency-grid}
+
+::: {.profile-card}
+<img src="images/dylan.jpeg" alt="Dylan Mattern" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Dylan Mattern**  
+VP – Data and Technology  
+[Contact](mailto:dmattern@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/nate.jpeg" alt="Nathan McCauley" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Nathan McCauley**  
+VP – Placement  
+[Contact](mailto:nmccaul@student.byu.edu)
+:::
+
+::: {.profile-card}
+<img src="images/philip.jpeg" alt="Philip Sun" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover;"><br>
+**Philip Sun**  
+VP – Events  
+[Contact](mailto:ps324@student.byu.edu)
+:::
+
+::::
+
 
 PMA Meetings are **every 1st Wednesday of the month at 5:30pm** in the Tanner building throughout the Fall and Winter semesters.
 
@@ -159,6 +169,13 @@ CSA Meetings are **every Thursday at 7pm** in the Tanner building throughout the
 The purpose of the Women in Strategy Association is to elevate every woman in business & support The BYU Marriott Strategy Program’s sense of purpose & community by fostering relationships within the program, enhancing professional opportunities, and expanding outreach to pre-business students. 
 
 WSA meetings are **every other Thursday at 5:30 - 6:30pm** in the Tanner building throughout the Fall and Winter semesters.
+
+<p style="text-align: center; margin-top: 2rem;">
+  <a href="https://clubs.byu.edu/p/clubview/18295873491224737" target="_blank" rel="noopener"
+     style="display: inline-block; background-color: #0063a6; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: bold;">
+    Join WSA
+  </a>
+</p>
 
 :::: {.presidency-grid}
 
